# pirateparty.gdn

./: README.md  pyproject.toml
ppgdn/: __init__.py
ppgdn/templates/: home.html
